--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "24.9.0",
     "jest-cli": "24.9.0",
     "jest-fetch-mock": "^3.0.3",
+    "prettier": "2.0.5",
     "puppeteer": "2.1.1"
   },
   "license": "MIT",
